[package]
name = "async_todo"
version = "0.1.0"
authors = ["Kiran"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"

[dependencies]
rand = "0.8.4"
tokio = { version = "1.0", features = ["full"] }

[dependencies.nom]
version = "7.1.1"
